# internal/http/routes/v1/customer.go
@@ -3,6 +3,10 @@ package v1
 import "github.com/gin-gonic/gin"
 
 func RegisterCustomer(customer *gin.RouterGroup, deps Deps) {
+	customer.POST("", deps.Customer.CreateCustomer)
+	customer.GET("/:id", deps.Customer.GetCustomer)
+	customer.PUT("/:id", deps.Customer.UpdateCustomer)
+
 	orders := customer.Group("/orders")
 	orders.GET("/:orderId", deps.Order.GetCustomerOrder)
 	orders.GET("/:orderId/payments", deps.Payment.ListOrderPayments)
